2004-07-25  Benjamin Otte  <otte@gnome.org>

	* gst/autoplug/gstspideridentity.c: (gst_spider_identity_link):
	  don't delay links on the sink elements, it causes unnegotiated
	  links.
	* gst/elements/gsttypefindelement.c:
	(gst_type_find_element_base_init):
	  add our padtemplates, we indeed do have some.
	* gst/elements/gsttypefindelement.c:
	(gst_type_find_element_handle_event),
	(gst_type_find_element_chain):
	  don't push data when typefinding failed.
	* gst/gstpad.c: (gst_pad_link_fixate):
	  check that no fixate function returns empty caps.
	* gst/gstpad.c: (gst_pad_push):
	  check that the link is negotiated before data gets pushed.
	* tools/gst-register.c: (main):
	  don't assert (fixes #148283)

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/gstconfig.sgml:
	  add GST_PLUGIN_EXPORT definition

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* gst/gstplugin.h:
	* gst/gstconfig.h.in:
	* win32/gstconfig.h:
	* win32/gstelements.def:
	* win32/gstelements.vcproj:
	* win32/gstoptimalscheduler.def:
	* win32/gstoptimalscheduler.vcproj:
	* win32/gstspider.def:
	* win32/gstspider.vcproj:
	  remove unused .def files and export symbols using GST_PLUGIN_DEFINE
    
2004-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-sections.txt:
	  remove GST_CAT_DEFAULT because the type has changed

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/gstbytestream.vcproj:
	* win32/gstelements.vcproj:
	* win32/gst-inspect.vcproj:
	* win32/gst-launch.vcproj:
	* win32/gstoptimalscheduler.vcproj:
	* win32/GStreamer.vcproj:
	* win32/gst-register.vcproj:
	* win32/gstspider.vcproj:
	* win32/msvc71.sln:
	  Copy the files where needed after building, The testsuite will be
	  built separately

2004-07-25  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/config.h:
	* win32/README.txt:
	* docs/manual/win32.xml:
	Fixed the plugin and GSTreamer location
